Creating static file to hold all css and javascript components

--- a/main.html
+++ b/main.html
@@ -4,43 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Synthesizer</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
-
-        body { 
-            margin: 0; 
-            font-family: 'Prompt', sans-serif; 
-            background-color: black;
-            color: white;
-        }
-        canvas { 
-            display: block; 
-        }
-        #header {
-            text-align: center;
-            font-size: 2em;
-            font-weight: 300;
-            font-style: italic;
-            margin: 20px 0;
-            color: white;
-        }
-        #controls {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        #playButton {
-            font-family: 'Prompt', sans-serif;
-            font-size: 1em;
-            padding: 10px 20px;
-            background-color: #0f55e3;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
     <div id="header">the synth website</div>
