--- a/main.html
+++ b/main.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div id="header">the synth website</div>
+    <!-- <div id="menu">
+        <button id="menuButton">Menu</button>
+    </div> -->
     <div id="controls">
         <button id="playButton">Play Sequence</button>
     </div>
+    <script src="./static/scripts/menu.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/FontLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
-    <script>
+    <script type="module">
+        import Snow from './static/scripts/snow.js'
         // Set up scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -29,7 +34,7 @@
 
         // Load texture
         const textureLoader = new THREE.TextureLoader();
-        const synthTexture = textureLoader.load('textures/Plastic005_1K-JPG_Color.jpg'); // Replace with your texture file path
+        const synthTexture = textureLoader.load('./static/textures/Plastic005_1K-JPG_Color.jpg'); // Replace with your texture file path
 
         // Synthesizer body
         const bodyGeometry = new THREE.BoxGeometry(4, 0.5, 2);
