Adding wooden holders, holy math

--- a/nathan.html
+++ b/nathan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Synthesizer with Lights</title>
+    <title>3D Synthesizer with Wooden Holder</title>
     <link rel="stylesheet" href="./static/styles.css">
 </head>
 <body>
@@ -19,9 +19,9 @@
             </div>
             <button class="menuItem dropdown">sequences</button>
             <div id="sequenceToggles" class="dropdownContent">
-                <button class="toggleButton" id="rainToggle">fast</button>
-                <button class="toggleButton" id="snowToggle">super chill</button>
-                <button class="toggleButton" id="spotlightToggle">space vibes</button>
+                <button class="toggleButton" id="fastToggle">fast</button>
+                <button class="toggleButton" id="superChillToggle">super chill</button>
+                <button class="toggleButton" id="spaceVibesToggle">space vibes</button>
             </div>
         </div>
     </div>
@@ -36,28 +36,24 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
     <script type="module">
         import Snow from './static/scripts/snow.js';
-        // Set up scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Orbit controls
         const controls = new THREE.OrbitControls(camera, renderer.domElement);
 
-        // Load texture
         const textureLoader = new THREE.TextureLoader();
-        const synthTexture = textureLoader.load('./static/textures/Plastic005_1K-JPG_Color.jpg'); // Replace with your texture file path
+        const synthTexture = textureLoader.load('./static/textures/Plastic005_1K-JPG_Color.jpg');
+        const woodTexture = textureLoader.load('./static/textures/Wood.jpg');
 
-        // Synthesizer body
         const bodyGeometry = new THREE.BoxGeometry(4, 0.5, 2);
         const bodyMaterial = new THREE.MeshStandardMaterial({ map: synthTexture });
         const synthBody = new THREE.Mesh(bodyGeometry, bodyMaterial);
         synthBody.position.y = 0.25;
         scene.add(synthBody);
 
-        // Adding some lights to the scene
         const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
         scene.add(ambientLight);
 
@@ -65,7 +61,6 @@
         directionalLight.position.set(5, 5, 5).normalize();
         scene.add(directionalLight);
 
-        // Knobs
         function createKnob(x, z) {
             const knobGroup = new THREE.Group();
 
@@ -75,8 +70,7 @@
             knob.position.y = 0.1;
             knobGroup.add(knob);
 
-            // Add ridges around the knob
-            const ridgeGeometry = new THREE.BoxGeometry(0.02, 0.2, 0.03); // Longer and slimmer dimensions
+            const ridgeGeometry = new THREE.BoxGeometry(0.02, 0.2, 0.03);
             const ridgeMaterial = new THREE.MeshBasicMaterial({ color: 0x474747 });
             const ridgeCount = 16;
             for (let i = 0; i < ridgeCount; i++) {
@@ -95,33 +89,29 @@
             scene.add(knobGroup);
         }
 
-        // Adding knobs
         createKnob(-1, 0.5);
         createKnob(0, 0.5);
         createKnob(1, 0.5);
 
-        // Buttons and Lights
         const buttons = [];
         const lights = [];
         function createButton(x, z, note) {
-            const buttonGeometry = new THREE.BoxGeometry(0.2, 0.1, 0.2); // Size of buttons
+            const buttonGeometry = new THREE.BoxGeometry(0.2, 0.1, 0.2);
             const buttonMaterial = new THREE.MeshBasicMaterial({ color: 0x0f55e3 });
             const button = new THREE.Mesh(buttonGeometry, buttonMaterial);
-            button.position.set(x, 0.5, z); // Position of buttons
-            button.userData = { note }; // Store the note in userData
+            button.position.set(x, 0.5, z);
+            button.userData = { note };
             scene.add(button);
             buttons.push(button);
 
-            // Create corresponding light
-            const lightGeometry = new THREE.SphereGeometry(0.05, 8, 8); // Small sphere for light
-            const lightMaterial = new THREE.MeshBasicMaterial({ color: 0x000000 }); // Initially off
+            const lightGeometry = new THREE.SphereGeometry(0.05, 8, 8);
+            const lightMaterial = new THREE.MeshBasicMaterial({ color: 0x000000 });
             const light = new THREE.Mesh(lightGeometry, lightMaterial);
-            light.position.set(x, 0.5, z - 0.3); // Position below the button on the z-axis
+            light.position.set(x, 0.5, z - 0.3);
             scene.add(light);
             lights.push(light);
         }
 
-        // Adding buttons with different notes closer together
         createButton(-1, -0.5, "C4");
         createButton(-0.6, -0.5, "D4");
         createButton(-0.2, -0.5, "E4");
@@ -131,15 +121,13 @@
         createButton(1.4, -0.5, "B4");
         createButton(1.8, -0.5, "C5");
 
-        // Adding play button
         function createPlayButton(x, z) {
-            const buttonGeometry = new THREE.BoxGeometry(0.3, 0.1, 0.3); // Size of play button
+            const buttonGeometry = new THREE.BoxGeometry(0.3, 0.1, 0.3);
             const buttonMaterial = new THREE.MeshBasicMaterial({ color: 0xffffff });
             const button = new THREE.Mesh(buttonGeometry, buttonMaterial);
-            button.position.set(-1.5, 0.5, z); // Position of play button
+            button.position.set(-1.5, 0.5, z);
             scene.add(button);
 
-            // Add click event to play button
             const raycaster = new THREE.Raycaster();
             const mouse = new THREE.Vector2();
 
@@ -159,10 +147,42 @@
 
         createPlayButton(2.2, -0.5);
 
-        // Setting up the camera
+        function createRoundedRect(x, y, z, width, height, depth, texture) {
+            const shape = new THREE.Shape();
+            const radius = 0.25;
+            shape.moveTo(x + radius, y);
+            shape.lineTo(x + width - radius, y);
+            shape.quadraticCurveTo(x + width, y, x + width, y + radius);
+            shape.lineTo(x + width, y + height - radius);
+            shape.quadraticCurveTo(x + width, y + height, x + width - radius, y + height);
+            shape.lineTo(x + radius, y + height);
+            shape.quadraticCurveTo(x, y + height, x, y + height - radius);
+            shape.lineTo(x, y + radius);
+            shape.quadraticCurveTo(x, y, x + radius, y);
+
+            const extrudeSettings = {
+                steps: 1,
+                depth: depth,
+                bevelEnabled: true,
+                bevelThickness: 0.1,
+                bevelSize: 0.1,
+                bevelSegments: 1
+            };
+
+            const geometry = new THREE.ExtrudeGeometry(shape, extrudeSettings);
+            const material = new THREE.MeshStandardMaterial({ map: texture });
+            const mesh = new THREE.Mesh(geometry, material);
+            mesh.position.set(0.12, 0.13, z);
+            return mesh;
+        }
+
+        const leftHolder = createRoundedRect(-2.2, -0.25, -1, 0.4, 0.6, 2, woodTexture);
+        const rightHolder = createRoundedRect(1.8, -0.25, -1, 0.4, 0.6, 2, woodTexture);
+        scene.add(leftHolder);
+        scene.add(rightHolder);
+
         camera.position.z = 5;
 
-        // Animation loop
         function animate() {
             requestAnimationFrame(animate);
             controls.update();
@@ -170,20 +190,16 @@
         }
         animate();
 
-        // Handle window resize
         window.addEventListener('resize', () => {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
         });
 
-        // Tone.js setup
         const synth = new Tone.Synth().toDestination();
 
-        // Sequence storage
         let noteSequence = [];
 
-        // Add click event for buttons to store note
         function onMouseClick(event) {
             const mouse = new THREE.Vector2();
             const raycaster = new THREE.Raycaster();
@@ -195,14 +211,13 @@
             const intersects = raycaster.intersectObjects(buttons);
             if (intersects.length > 0) {
                 const button = intersects[0].object;
-                button.material.color.set(0x0012e2); // Change to a different shade of blue
-                noteSequence.push(button.userData.note); // Store the note in the sequence
+                button.material.color.set(0x0012e2);
+                noteSequence.push(button.userData.note);
             }
         }
 
         window.addEventListener('click', onMouseClick);
 
-        // Function to play the sequence and activate lights
         function playSequence() {
             if (noteSequence.length === 0) return;
 
@@ -216,7 +231,6 @@
                         lights[buttonIndex].material.color.set(0xff0000);
                     }
                 }, index * 100);
-
 
                 setTimeout(() => {
                     const buttonIndex = buttons.findIndex(b => b.userData.note === note);
@@ -237,7 +251,6 @@
             });
         }
 
-        // Hide the original play button in the controls div
         document.getElementById('playButton').style.display = 'none';
     </script>
 </body>
