--- a/main.html
+++ b/main.html
@@ -35,7 +35,9 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/geometries/TextGeometry.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.35/Tone.min.js"></script>
     <script type="module">
-        import Snow from './static/scripts/snow.js';
+        import { Rain } from './static/scripts/rain.js';
+        import { Snow } from './static/scripts/snow.js';
+
         // Set up scene, camera, and renderer
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -65,6 +67,9 @@
         directionalLight.position.set(5, 5, 5).normalize();
         scene.add(directionalLight);
 
+        // Scene Effects
+        // Rain(scene);
+        Snow(scene);
         // Knobs
         function createKnob(x, z) {
             const knobGroup = new THREE.Group();
